# The-beauty-of-control2

./: .gitignore  README.md
code/: CMakeLists.txt
src/: CMakeLists.txt  DP_Numerial_test.cpp
src/DP_Numerial_test/: CMakeLists.txt  DP_Numerial_test.cpp  DP_Numerical_test.cpp
src/F1_LQR_Gain/: CMakeLists.txt  F1_LQR_Gain.cpp
